# graphragagent

./: .env.example  .gitignore  ADK_AGENT_UPDATE.md  ADK_CLARIFICATION.md  ADK_INTEGRATION.md  ADK_MCP_INTEGRATION.md  ARCHITECTURE.md  BACKEND_FIX_COMPLETE.md  CHECKLIST.md  FINAL_ARCHITECTURE.md  FIXES.md  GETTING_STARTED.md  GITHUB_FEATURE_SUMMARY.md  GITHUB_INTEGRATION.md  GOOGLE_ADK_IMPLEMENTATION.md  IMPLEMENTATION_STATUS.md  INDEX.md  MCP_HTTP_ARCHITECTURE.md  MCP_INTEGRATION.md  MCP_SUMMARY.md  PROJECT_OVERVIEW.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  SETUP.md  STARTUP_FIXED.md  START_HERE.md  ai-conferennce.md  docker-compose.yml  pyproject.toml  run_mcp_http_server.py  run_mcp_server.py  start.sh  start_all_services.sh  start_frontend.sh  stop_all_services.sh
backend/: config.py  document_processor.py  embeddings.py  gemini_agent.py  gemini_agent.py.backup  github_processor.py  graph_store.py  main.py  mcp_service.py  models.py
frontend/: index.html  package.json
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/components/: ChatInterface.jsx  DocumentList.jsx  DocumentUpload.jsx  GitHubUpload.jsx
